--- a/Shop-men/index.html
+++ b/Shop-men/index.html
@@ -60,6 +60,7 @@
                   <li><a href="#" title="Brands">Brands</a></li>
                   <li><a href="#" title="Launches">Launches</a></li>
                   <li><a href="#" title="Sales">Sale</a></li>
+                  <li><a href="#" title="More" >More</a></li>
                 </ul>
             </div>
         </div>
